--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-  
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur saepe, numquam enim adipisci earum alias sapiente ipsum quos minus pariatur. Exercitationem modi sit vel a perspiciatis, dolor eius delectus quasi.
+  </p>
 </body>
 </html>
