--- a/index.html
+++ b/index.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
-<head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Travelgram | Perfil de viagens</title>
-  <link rel="stylesheet" href="styles/index.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Travelgram | Perfil de viagens</title>
+    <link rel="stylesheet" href="styles/index.css" />
 
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <div class="bg-surface-color">
+        <nav class="container">
+          <a href="#" id="logo">
+            <img src="assets/icons/Logo.svg" alt="Logomarca" />
+          </a>
 
-</body>
+          <ul id="primary-menu">
+            <li>
+              <a href="#">
+                <img
+                  src="assets/icons/MagnifyingGlass.svg"
+                  alt="icone de lupa"
+                />
+              </a>
+            </li>
+            <li><a href="#">Explorer</a></li>
+            <li><a href="#">Minhas Viagens</a></li>
+            <li>
+              <a href="#">
+                <img src="assets/profile.png" alt="Imagem de Luiz Goncalves" />
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
