--- a/index.html
+++ b/index.html
@@ -15,32 +15,60 @@
     />
   </head>
   <body>
-    <header>
-      <div class="bg-surface-color">
-        <nav class="container">
-          <a href="#" id="logo">
-            <img src="assets/icons/Logo.svg" alt="Logomarca" />
-          </a>
+    <div class="bg-surface-color">
+      <nav class="container">
+        <a href="#" id="logo">
+          <img src="assets/icons/Logo.svg" alt="Logomarca" />
+        </a>
 
-          <ul id="primary-menu">
+        <ul id="primary-menu">
+          <li>
+            <a href="#">
+              <img src="assets/icons/MagnifyingGlass.svg" alt="icone de lupa" />
+            </a>
+          </li>
+          <li><a href="#">Explorer</a></li>
+          <li><a href="#">Minhas Viagens</a></li>
+          <li>
+            <a href="#">
+              <img src="assets/profile.png" alt="Imagem de Luiz Goncalves" />
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <header>
+        <div class="container">
+          <div id="profile">
+            <img src="assets/profile.png" alt="Imagem de Luiz Goncalves" />
+            <div>
+              <h1>Luiz Goncalves</h1>
+
+              <p>
+                Amante de viagens, cultura e gastronomia. 🌍✈️<br>
+                Aqui compartilho
+                as histórias registradas em cada clique, explorando cantinhos
+                fascinantes do nosso planeta a partir da movimentada cidade de
+                Londres. 🏙️📸
+              </p>
+            </div>
+          </div>
+          <ul id="info">
             <li>
-              <a href="#">
-                <img
-                  src="assets/icons/MagnifyingGlass.svg"
-                  alt="icone de lupa"
-                />
-              </a>
+              <img src="assets/icons/MapPin.svg" alt="Icone de Pin" />
+              <span>Sao Paulo, Brazil</span>
             </li>
-            <li><a href="#">Explorer</a></li>
-            <li><a href="#">Minhas Viagens</a></li>
             <li>
-              <a href="#">
-                <img src="assets/profile.png" alt="Imagem de Luiz Goncalves" />
-              </a>
+              <img src="assets/icons/AirplaneTilt.svg" alt="Icone de aviao" />
+              <span>37 Paises</span>
+            </li>
+            <li>
+              <img src="assets/icons/Image.svg" alt="Icone de foto" />
+              <span>240 fotos</span>
             </li>
           </ul>
-        </nav>
-      </div>
-    </header>
+        </div>
+      </header>
+    </div>
   </body>
 </html>
