--- a/index.html
+++ b/index.html
@@ -5,70 +5,4 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Travelgram | Perfil de viagens</title>
-    <link rel="stylesheet" href="styles/index.css" />
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="bg-surface-color">
-      <nav class="container">
-        <a href="#" id="logo">
-          <img src="assets/icons/Logo.svg" alt="Logomarca" />
-        </a>
-
-        <ul id="primary-menu">
-          <li>
-            <a href="#">
-              <img src="assets/icons/MagnifyingGlass.svg" alt="icone de lupa" />
-            </a>
-          </li>
-          <li><a href="#">Explorer</a></li>
-          <li><a href="#">Minhas Viagens</a></li>
-          <li>
-            <a href="#">
-              <img src="assets/profile.png" alt="Imagem de Luiz Goncalves" />
-            </a>
-          </li>
-        </ul>
-      </nav>
-
-      <header>
-        <div class="container">
-          <div id="profile">
-            <img src="assets/profile.png" alt="Imagem de Luiz Goncalves" />
-            <div>
-              <h1>Luiz Goncalves</h1>
-
-              <p>
-                Amante de viagens, cultura e gastronomia. 🌍✈️<br>
-                Aqui compartilho
-                as histórias registradas em cada clique, explorando cantinhos
-                fascinantes do nosso planeta a partir da movimentada cidade de
-                Londres. 🏙️📸
-              </p>
-            </div>
-          </div>
-          <ul id="info">
-            <li>
-              <img src="assets/icons/MapPin.svg" alt="Icone de Pin" />
-              <span>Sao Paulo, Brazil</span>
-            </li>
-            <li>
-              <img src="assets/icons/AirplaneTilt.svg" alt="Icone de aviao" />
-              <span>37 Paises</span>
-            </li>
-            <li>
-              <img src="assets/icons/Image.svg" alt="Icone de foto" />
-              <span>240 fotos</span>
-            </li>
-          </ul>
-        </div>
-      </header>
-    </div>
-  </body>
-</html>
+    <meta name="viewport" content="width=device-width, i
